[package]
name = "nes_rs"
version = "0.1.0"
authors = ["Andrew-William-Smith <aws@awsmith.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.3.0"
glium = { version = "0.26", default-features = true }
imgui-glium-renderer = "0.3.0"
imgui-winit-support = "0.3.1"